<resources>
    <string name="app_version">微客 V1.0</string>

    <string name="app_name">微客</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_publish">Publish</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>

    <string name="footer_button_close">取消</string>


    <!--发布界面相关-->
    <string name="pub_text">发布任务</string>
    <string name="pub_people">联系人</string>
    <string name="pub_phone">电话</string>
    <string name="pub_address">地址</string>
    <string name="time">时间</string>
    <string name="money">佣金</string>
    <string name="add_lable">添加标签</string>
    <string name="pub">发布</string>
    <string name="pab_new_need">发布新的需求(字数不大于200)...</string>
    <string name="niming">匿名任务</string>


    <!--下拉刷新-->
    <string name="pull_to_refresh_top_pull">下拉刷新</string>
    <string name="pull_to_refresh_top_release">释放刷新</string>
    <string name="pull_to_refresh_top_refreshing">加载中...</string>
    <string name="pull_to_refresh_bottom_pull">继续拖动</string>
    <string name="pull_to_refresh_bottom_release">放开装载更多</string>
    <string name="pull_to_refresh_bottom_refreshing">正在装载数据..</string>

    <string name="take_out">外卖</string>
    <string name="express">快递</string>
    <string name="hot_boom">代购</string>
    <string name="move_house">搬家</string>
    <string name="rent_car">租车</string>
    <string name="else_string">其他</string>


    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>
    <string name="location_faild">定位失败</string>
    <string name="no_data">暂无数据</string>

    <string name="title_activity_address_select">地址选择</string>
    <string name="title_activity_task_details">任务详情</string>
    <string name="title_activity_personal_home_page">个人详情</string>

    <string name="title_edit_personal_info">编辑资料</string>

    <string name="title_edit_personal_info_details">更改信息</string>

    <string name="title_activity_orders_evaluate">评价</string>
    <string name="complete_address">填写地址</string>


    <!--编辑图片Acitvity-->
    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>

    <string name="menu_download">Download</string>

    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>

    <string name="description_cropped_image">Cropped image</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>

</resources>
