<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">
    <!--顶部 toolbar-->

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        app:navigationIcon="@drawable/ic_back_arrow"
        android:fitsSystemWindows="true"
        >
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发布任务"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />

    </android.support.v7.widget.Toolbar>





    <RelativeLayout
        android:id="@+id/rl_pub"
        android:layout_marginBottom="7dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="7dp">

<!--        <CheckBox
            android:id="@+id/id_pubCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/id_pubCheckBox"
            android:text="@string/niming" />-->

        <Button
            android:id="@+id/id_pubBtn"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@drawable/corner_btn_pub"
            android:text="@string/pub"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_words"
            android:text="0/200"
            android:layout_marginRight="14dp"
            android:textColor="@color/gray_dark"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/id_pubBtn"
            android:layout_toStartOf="@+id/id_pubBtn"
            android:layout_marginEnd="14dp" />
    </RelativeLayout>


    <ScrollView
        android:layout_above="@id/rl_pub"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <!--联系人  电话 地址-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">
                <!--联系人-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pub_people"
                        android:paddingLeft="@dimen/pub_padding"
                        android:paddingRight="@dimen/pub_padding"
                        android:paddingBottom="@dimen/pub_padding"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/pub_text_size"
                        android:id="@+id/textView2" />

                    <EditText
                        android:id="@+id/id_pubName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="真实姓名"
                        android:selectAllOnFocus="true"
                        android:paddingBottom="@dimen/pub_padding"
                        android:textColorHint="@color/colorPubGray"
                        android:textSize="15sp" />
                </LinearLayout>
                <!-- 竖直水平线-->
                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#e2e3de" />
                <!--电话-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pub_phone"
                        android:paddingLeft="@dimen/pub_padding"
                        android:paddingRight="@dimen/pub_padding"
                        android:paddingBottom="@dimen/pub_padding"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/pub_text_size"/>

                    <EditText
                        android:id="@+id/id_pubPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="你的电话"
                        android:selectAllOnFocus="true"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingBottom="@dimen/pub_padding"
                        android:textColorHint="@color/colorPubGray"
                        android:textSize="15sp"/>
                </LinearLayout>
                <!-- 竖直水平线-->
                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#e2e3de" />
                <!--地址-->
                <LinearLayout
                    android:id="@+id/id_pubAddressLayout"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pub_address"
                        android:paddingLeft="@dimen/pub_padding"
                        android:paddingRight="@dimen/pub_padding"
                        android:paddingBottom="@dimen/pub_padding"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/pub_text_size"/>

                    <TextView
                        android:clickable="false"
                        android:id="@+id/id_pubAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="任务地址"
                        android:selectAllOnFocus="true"
                        android:paddingBottom="@dimen/pub_padding"
                        android:textColorHint="@color/colorPubGray"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <!--水平线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e3de" />


            <!-- 时间 佣金 照片-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">
                <!--时间-->
                <LinearLayout
                    android:id="@+id/id_pubTimeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:paddingLeft="@dimen/pub_padding"
                        android:paddingRight="@dimen/pub_padding"
                        android:paddingBottom="@dimen/pub_padding"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/pub_text_size"/>

                    <TextView
                        android:id="@+id/id_pubTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="完成时间"
                        android:paddingBottom="@dimen/pub_padding"
                        android:textColorHint="@color/colorPubGray"
                        android:textSize="15sp"/>
                </LinearLayout>

                <!-- 竖直水平线-->
                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#e2e3de" />

                <!--佣金-->

                <!-- 竖直水平线-->
                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#e2e3de" />

                <!--照片-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money"
                        android:paddingLeft="@dimen/pub_padding"
                        android:paddingRight="@dimen/pub_padding"
                        android:paddingBottom="@dimen/pub_padding"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/pub_text_size"/>

                    <EditText
                        android:id="@+id/et_charges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="例:10元"
                        android:inputType="numberDecimal"
                        android:paddingBottom="@dimen/pub_padding"
                        android:textColorHint="@color/colorPubGray"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="@dimen/pub_padding"-->
                    <!--android:text="@string/add_photo"-->
                    <!--android:textColor="@color/colorPubGray" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:text="@string/add_lable"
                        android:paddingLeft="@dimen/pub_padding"
                        android:paddingRight="@dimen/pub_padding"
                        android:paddingBottom="@dimen/pub_padding"
                        android:paddingTop="8dp"
                        android:textSize="@dimen/pub_text_size"
                        android:id="@+id/textView5" />

                    <ImageView
                    android:id="@+id/id_pubImg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_photo"
                    />



                </LinearLayout>

                <!--<ImageView-->
                    <!--android:id="@+id/id_pubImg"-->
                    <!--android:layout_width="30dp"-->
                    <!--android:layout_height="30dp"-->
                    <!--android:background="@null"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:src="@drawable/ic_add_photo"-->
                    <!--/>-->


            </LinearLayout>

            <!--水平线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#e2e3de" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_pub_needText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f3f3f3"
                android:gravity="top"
                android:hint="@string/pab_new_need"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:padding="@dimen/pub_padding"
                android:maxLength="200"
                android:selectAllOnFocus="true"
                android:textSize="17sp"
                />
            />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#e2e3de" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>